# resize-img-opencv

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  install.sh
src/: client.cpp  nclient.cpp  nserver.cpp  process.cpp  server.cpp
